Menu: adjust checkbox for horz overflow bug

--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -23,7 +23,8 @@
 	}
 
 	.results {
-		overflow: auto;
+		overflow-x: hidden;
+		overflow-y: auto;
 	}
 	
 	[heading] {
@@ -189,7 +190,7 @@
 		
 		> check-box {
 			--color: var(--checkboxColor) !important;
-			margin: -.25em -.5em -.25em .15em;
+			margin: -.25em 0em -.25em .15em;
 			order: 2;
 		}
 
